--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -8,7 +8,7 @@
     "height": 20,
     "modules-left": ["hyprland/workspaces"],
     "modules-center": ["mpris"],
-    "modules-right": ["custom/updates", "cpu", "memory", "pulseaudio","pulseaudio#microphone", "battery", "clock", "tray"],
+    "modules-right": ["custom/updates", "custom/weather", "cpu", "memory", "pulseaudio","pulseaudio#microphone", "battery", "clock", "tray"],
     "hyprland/window": {
         "format": "{}"
     },
@@ -130,18 +130,28 @@
       },
       "ignored-players": ["vlc", "firefox", "brave"]
     },
+
+    "custom/weather": {
+	    "format": "{}",
+	    "format-alt": "{alt}: {}",
+	    "format-alt-click": "click-right",
+	    "interval": 600,
+	    "tooltip-format": "Richmond Hill",
+	    "exec": "curl -s 'https://wttr.in/Richmond+Hill?format=1' | tr -s ' '",
+	    "exec-if": "ping wttr.in -c1"
+    },
     
     "custom/updates": {
-    "format": "{} {icon}",
-    "return-type": "json",
-    "format-icons": {
-        "has-updates": "󱍷",
-        "updated": "󰂪"
-      },
-      "exec-if": "which waybar-module-pacman-updates",
-      "exec": "waybar-module-pacman-updates --interval-seconds 5 --network-interval-seconds 300 --no-zero-output --tooltip-align-columns 'Source Code Pro'",
-      "on-click": "foot -e 'yay'; pkill -SIGRTMIN+8 waybar",
-    },
+	    "format": "{} {icon}",
+	    "return-type": "json",
+	    "format-icons": {
+		    "has-updates": "󱍷",
+		    "updated": "󰴭"
+	    },
+	    "exec-if": "which waybar-module-pacman-updates",
+	    "exec": "waybar-module-pacman-updates --no-zero-output --interval-seconds 5 --network-interval-seconds 300 --no-zero-output --tooltip-align-columns 'Source Code Pro'",
+	    "on-click": "foot -e 'paru'; pkill -SIGRTMIN+8 waybar",
+    },  
      
     "mpd": {
       "format": "{stateIcon} {artist} - {title}",
