--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -57,6 +57,7 @@ general {
     col.active_border = rgba(7aa2f7aa)
     col.inactive_border = rgba(414868aa)
     layout = dwindle
+    resize_on_border = yes
 }
 
 animations {
@@ -81,4 +82,11 @@ dwindle {
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = off
+}
+
+misc {
+    force_default_wallpaper = 0
+    disable_hyprland_logo = yes
+    disable_splash_rendering = yes
+    vrr = 0
 }
