dunst slider notifications added

--- a/hypr/shortcuts.conf
+++ b/hypr/shortcuts.conf
@@ -75,11 +75,11 @@ bind = $mainMod SHIFT, J, movewindow, d
 
 
 # Fn keys
-bind = , XF86MonBrightnessUp, exec, brightnessctl -q s +10%
-bind = , XF86MonBrightnessDown, exec, brightnessctl -q s 10%-
-bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
-bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
-bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+# bind = , XF86MonBrightnessUp, exec, brightnessctl -q s +5%
+# bind = , XF86MonBrightnessDown, exec, brightnessctl -q s 5%-
+# bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+# bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
+# bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bind = , XF86AudioPlay, exec, playerctl play-pause
 bind = , XF86AudioPause, exec, playerctl pause
 bind = , XF86AudioNext, exec, playerctl next
@@ -88,3 +88,11 @@ bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 bind = , XF86Calculator, exec, qalculate-gtk
 bind = , XF86Lock, exec, hyprlock
 bind = , XF86Tools, exec, alacritty --class dotfiles-floating -e ~/dotfiles/hypr/settings/settings.sh
+
+
+binde = , XF86MonBrightnessUp, exec, backlight up
+binde = , XF86MonBrightnessDown, exec, backlight down
+
+binde = , XF86AudioRaiseVolume, exec, volume up
+binde = , XF86AudioLowerVolume, exec, volume down
+bind = , XF86AudioMute, exec, volume mute
