--- a/hypr/shortcuts.conf
+++ b/hypr/shortcuts.conf
@@ -15,6 +15,7 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, U, togglesplit, # dwindle
 bind = $mainMod SHIFT, P, exec, pavucontrol
 bind = $mainMod SHIFT, W, exec, $restartwaybar
+bind = $mainMod CTRL, W, exec, waypaper
 
 # Saving screenshots and copying to clipboard   
 bind = $mainMod ALT, S, exec, grim - | tee ~/pictures/sc/screenshot-$(date +'%Y-%m-%d_%H-%M-%S').png | wl-copy
