--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,6 +8,7 @@ exec-once = waybar & hyprpaper
 exec-once = nm-applet 
 exec-once = gammastep -O 3400
 exec-once = dunst
+exec-once = waypaper --restore
 exec-once = rclone --vfs-cache-mode writes mount OneDrive: ~/OneDrive &
 
 $terminal = foot
