small changes in waybar css

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -149,7 +149,7 @@
 		    "updated": "󰴭"
 	    },
 	    "exec-if": "which waybar-module-pacman-updates",
-	    "exec": "waybar-module-pacman-updates --no-zero-output --interval-seconds 5 --network-interval-seconds 300 --no-zero-output --tooltip-align-columns 'Source Code Pro'",
+	    "exec": "waybar-module-pacman-updates --no-zero-output --interval-seconds 5 --network-interval-seconds 300 --tooltip-align-columns 'Source Code Pro'",
 	    "on-click": "foot -e 'paru'; pkill -SIGRTMIN+8 waybar",
     },
      
