--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -150,6 +150,7 @@
 	    },
 	    "exec-if": "which waybar-module-pacman-updates",
 	    "exec": "waybar-module-pacman-updates --no-zero-output --interval-seconds 5 --network-interval-seconds 300 --tooltip-align-columns 'Source Code Pro'",
+      "exec-if": "exit 0",
 	    "on-click": "foot -e 'paru'; pkill -SIGRTMIN+8 waybar",
     },
      
