some icons replaced in waybar

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -146,7 +146,9 @@
 	    "return-type": "json",
 	    "format-icons": {
 		    "has-updates": "󱍷",
-		    "updated": "󰴭"
+		    "updated": " "
+		    // "updated": "  "
+		    // "updated": "󰴭  "
 	    },
 	    "exec-if": "which waybar-module-pacman-updates",
 	    "exec": "waybar-module-pacman-updates --no-zero-output --interval-seconds 5 --network-interval-seconds 300 --tooltip-align-columns 'Source Code Pro'",
